right align footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,7 +23,7 @@
           </ul>
         {%- endif %}
         </div>
-        <div class="footer-col">
+        <div class="footer-col" style="text-align: right;">
           <p>{{ site.footer1 | escape }}<br/>{{ site.footer2 | escape }}</p>
         </div>
       </div>
